# UNDO-cctv-detection

./: .env-sample  .gitignore  .pre-commit-config.yaml  README.md  app.py  local_test_pipeline.sh  mypy.ini  pyproject.toml  requirements.txt
docs/: TRAINING.md  UI_GUIDE.md  build_docs.sh
docs/source/: ARCHITECTURE.md  CONFIGURATION.md  DATASET.md  DEVELOPMENT.md  EVALUATION.md  conf.py  index.rst  modules.rst  scripts.benchmark_models.rst  scripts.clean_runs.rst  scripts.evaluate_detr.rst  scripts.evaluate_faster_rcnn.rst  scripts.launch_ui.rst  scripts.prepare_examples.rst  scripts.rst  scripts.train_detr.rst  scripts.train_faster_rcnn.rst  scripts.train_yolo.rst  src.application.dataset_preparation.rst  src.application.metrics_aggregator.rst  src.application.rst  src.application.surveillance_service.rst  src.application.training_service.rst  src.domain.camera.rst  src.domain.exceptions.rst  src.domain.rst  src.domain.services.data_splitter.rst  src.domain.services.dataset_preparer.rst  src.domain.services.distance_calculator.rst  src.domain.services.image_converter.rst  src.domain.services.model_trainer.rst  src.domain.services.object_detector.rst  src.domain.services.rst  src.infrastructure.data_loaders.rst  src.infrastructure.dataset_preparer_impl.rst  src.infrastructure.detector_factory.rst  src.infrastructure.detr_data_preparer.rst  src.infrastructure.detr_dataset.rst  src.infrastructure.detr_detector.rst  src.infrastructure.detr_trainer.rst  (+16 more)
scripts/: benchmark_models.py  clean_runs.py  evaluate_detr.py  evaluate_faster_rcnn.py  launch_ui.py  prepare_examples.py  train_detr.py  train_faster_rcnn.py  train_yolo.py
src/: config.py
src/application/: metrics_aggregator.py  training_service.py
src/domain/services/: distance_calculator.py  model_trainer.py  object_detector.py
src/infrastructure/: dataset_preparer_impl.py  detector_factory.py  detr_data_preparer.py  detr_dataset.py  detr_detector.py  detr_trainer.py  device_selector.py  faster_rcnn_dataset.py  faster_rcnn_detector.py  trainers.py  yolo_detector.py
src/presentation/: main_ui.py  trainers_orchestration.py
src/tools/data_collection/: camera_image_downloader.py  image_scraper.py
src/ui/: gradio_app.py  visualizations.py
tests/: test_clean_runs.py  test_config.py
tests/application/: test_training_service.py
tests/infrastructure/: test_detectors.py  test_detr_dataset.py  test_detr_trainer.py  test_device_selector.py  test_trainers.py
tests/ui/: test_gradio_app.py
